gs-plugin-appstream: Race on appstream silo changes

Instead of relying on XbSilo watchers use its own GFileMonitor, which
can detect changes also when loading the appstream data from various
directories, thus it can also reload the data again, if needed, instead
of using possibly stale appstream data.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/1517